<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_message">

        <SwitchPreferenceCompat
            app:key="activate_messages"
            app:title="@string/messages_activated"
            app:summaryOff="@string/activate_messages"
            app:summaryOn="@string/arkanhelp_will_send_help_messages"/>

        <EditTextPreference
            app:key="body_message"
            app:title="@string/set_text_message"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/sendHelpMessageWaitingTime"
            app:entryValues="@array/sendHelpMessageWaitingTimeValues"
            app:key="waiting_time"
            app:title="@string/waiting_time_before_asking_help"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header"
        app:icon="@drawable/ic_sound">

        <SwitchPreferenceCompat
            app:key="activate_audio"
            app:title="@string/save_audios"
            app:summaryOn="@string/save_ambient_sound"
            app:summaryOff="@string/do_not_save_audios"/>

        <SwitchPreferenceCompat
            app:key="send_audio"
            app:title="@string/send_audios"
            app:dependency="activate_audio"
            app:summaryOff="@string/do_not_send_audios"
            app:summaryOn="@string/send_audios_in_message"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/geo_location"
        app:icon="@drawable/ic_location">

        <SwitchPreferenceCompat
            app:key="activate_geolocation"
            app:title="@string/share_location"
            app:summaryOn="@string/share_your_location_in_your_message"
            app:summaryOff="@string/do_not_share_my_location"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accelerometer"
        app:icon="@drawable/ic_accelerometer">

        <SeekBarPreference
            app:key="sensitivity"
            app:title="@string/sensitivity"
            app:showSeekBarValue="true"
            app:defaultValue="true"/>


    </PreferenceCategory>


</PreferenceScreen>