<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.hilbing.arkanhelp.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.hilbing.arkanhelp.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/logsFragment"
        android:name="com.hilbing.arkanhelp.fragments.LogsFragment"
        android:label="@string/logs"
        tools:layout="@layout/fragment_logs" />
    <fragment
        android:id="@+id/audiosFragment"
        android:name="com.hilbing.arkanhelp.fragments.AudiosFragment"
        android:label="@string/audios"
        tools:layout="@layout/fragment_audios" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hilbing.arkanhelp.fragments.SettingsFragment"
        android:label="@string/settings" />
</navigation>