<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/service_active_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_activation"/>

        <TextView
            android:id="@+id/minutes_waiting_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_time"/>

        <TextView
            android:id="@+id/save_audios_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_ambient_sound"/>

        <TextView
            android:id="@+id/share_location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_location"/>

        <ProgressBar
            android:id="@+id/accelerometer_sensitivity_pb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:textColor="@android:color/black"
            style="?android:attr/progressBarStyleHorizontal"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>